# simple-pushgateway

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  index.html  index.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: build-image.yaml  lint-test.yml  release.yaml
app/: main.py
charts/simple-pushgateway/: Chart.yaml  README.md  values.yaml
charts/simple-pushgateway/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  servicemonitor.yaml
tests/: test_main.py
