[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "B", "I"]
exclude = ["__init__.py"]
fix = true
show-fixes = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # ignore asserts in tests

[tool.mypy]
python_version = 3.12
# strict = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
