[metadata]
name = simple-pushgateway
version = 0.1.0
description = A simple Prometheus Pushgateway compatible server with Redis backend
author = Marian Soltys
author_email = 41568766+maso7@users.noreply.github.com
url = https://github.com/pixelfederation/simple-pushgateway
license = MIT
classifiers =
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.12
install_requires =
    fastapi
    uvicorn[standard]
    redis
    prometheus-client

[options.packages.find]
where = app

[options.entry_points]
console_scripts =
    # add CLI entrypoints here if needed
